# os-presenter

./: .gitignore  DEDUPLICATION_FEATURE.md  LIBRARY_TEST_GUIDE.md  PLUGIN-REFACTOR-SUMMARY.md  QUICK-FIX.md  QUICK_TEST.md  README.md  TESTING_SUMMARY.md  THUMBNAIL_IMPLEMENTATION.md  index.html  package-lock.json  package.json  react-router.config.ts  sb-vite.config.ts  vite.config.ts
.storybook/: main.ts  preview.ts
scripts/: inspect-storage.sh
src/: App.css  App.tsx  entry.client.tsx  root.tsx  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.preview.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/font-variants/: Cargo.toml  README.md
src-tauri/plugins/font-variants/src/: commands.rs  lib.rs  models.rs
src-tauri/src/: lib.rs  models.rs  storage.rs
src/audience/: index.tsx  layout.tsx
src/consts/: canvas.ts
src/context/: presenter.tsx
src/hooks/: use-audience-sync.ts  use-global-drag-cursor.ts  use-is-audience-route.ts  use-item-reorder.ts  use-lasso-select.ts  use-panel-item-drag.ts  use-settings-sync.ts  use-settings.ts  use-show-keyboard-nav.ts  use-sidebar-multi-select.ts  use-slide-clipboard.ts  use-slide-multi-select.ts  use-storage-init.ts  use-system-fonts.ts  use-video-state.ts  use-video-sync.ts  use-video-thumbnail.ts  useStorageInit.ts  useSystemFonts.ts
src/lib/: drag-utils.ts
src/presenter/: index.tsx  layout.tsx
src/services/: audience.ts  settings.ts  storage.ts
src/stores/: README.md  mediaLibraryStore.ts  presenterStore.ts
src/styles/: index.css  scroll-bar.css
(+310 files in other folders)
